     this creates a balistic error which continue through all the exercice.

     This bug is identified and fixed in v0.61 (Core DB model v33).

 Other changes:

   - ofaIAccountFilter: remove ofa_iaccount_filter_set_prefs() unused method.
   - ofaIDateFilter: ofa_idate_filter_set_prefs() renamed to ofa_idate_filter_set_settings_key() (todo #1220).

-----------------------------------------------------------------------
 Version 0.60
 ============

 Released on 2016-10-08
  
 New features and improvements:

   - RecurrentOperation: DB Model v5.
   - Accelerators: define new keys in Dossier menu (todo #1204).
   - AccountSelect, OpeTemplateSelect: save settings before hiding the dialog.
   - BalanceRender: improve appearance of header notes (todo #1191).
   - BalanceRender: improve columns titles (todo #1193).
   - DossierManager: disable open/delete actions on opened dossier (todo #1183).
   - DossierTreeview: disable columns depending of the filter (todo #1185).
   - EntryPage: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - ITVColumnable: define twins column groups. 
   - OpeTemplate: make the treeview sortable (todo #1200).
   - Reconciliation: improve display and automated proposals.
   - ReconciliationRender: add debit and credit soldes, change back summary color (todo #1195).
   - RecurrentModel: allow to be duplicated (todo #1206).
   - RecurrentModel: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - RecurrentNew: managed as a singleton (todo #1213).
   - RecurrentRun: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - RecurrentRun: no more generate a warning on empty entries (todo #1177).
   - SettlementPage: takes advantage of new display facilities.
   - TVAForm: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - TVARecord: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).