@@ -103,9 +103,9 @@ gboolean        ofo_ledger_is_valid_data       ( const gchar *mnemo, const gchar
 
 gboolean        ofo_ledger_archive_balances    ( ofoLedger *ledger, const GDate *date );
 
-//guint           ofo_ledger_archive_get_count   ( ofoLedger *ledger );
-//const gchar    *ofo_ledger_archive_get_currency( ofoLedger *ledger, guint idx );
-//const GDate    *ofo_ledger_archive_get_date    ( ofoLedger *ledger, guint idx );
+guint           ofo_ledger_archive_get_count   ( ofoLedger *ledger );
+const gchar    *ofo_ledger_archive_get_currency( ofoLedger *ledger, guint idx );
+const GDate    *ofo_ledger_archive_get_date    ( ofoLedger *ledger, guint idx );
 ofxAmount       ofo_ledger_archive_get_debit   ( ofoLedger *ledger, const gchar *currency, const GDate *date );
 ofxAmount       ofo_ledger_archive_get_credit  ( ofoLedger *ledger, const gchar *currency, const GDate *date );
 
