@@ -70,6 +70,7 @@
 
    - ofaIAccountFilter: remove ofa_iaccount_filter_set_prefs() unused method.
    - ofaIDateFilter: ofa_idate_filter_set_prefs() renamed to ofa_idate_filter_set_settings_key() (todo #1220).
+   - ofaLedgerArcStore: new class.
 
 -----------------------------------------------------------------------
  Version 0.60
